--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm-install-global": "^1.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
+    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
