--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
