--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
     "react-visibility-sensor": "^5.1.1",
+    "shufflejs": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
