--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^1.0.8",
     "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
