--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "^18.0.0",
     "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.2.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
+    "react-modal-video": "^1.2.8",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^1.0.8",
