--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm-install-global": "^1.0.0",
     "react": "^18.0.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.3.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^1.0.8",
+    "react-scroll-up": "^1.3.7",
     "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
