--- a/Client-side/package.json
+++ b/Client-side/package.json
@@ -24,6 +24,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-modal-video": "^1.2.8",
     "react-player": "^2.10.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^1.0.8",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "sass": "^1.52.1"
   }
 }
