--- a/Client-side/package.json
+++ b/Client-side/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@react-google-maps/api": "^2.11.8",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cogo-toast": "^4.2.3",
     "google-map-react": "^2.1.10",
     "npm-install-global": "^1.0.0",
     "react": "^18.0.0",
@@ -18,12 +23,16 @@
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.2.0",
     "react-dom": "^18.0.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
+    "react-loader-spinner": "^5.3.4",
+    "react-loading-skeleton": "^3.1.0",
     "react-modal-video": "^1.2.8",
     "react-player": "^2.10.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -31,10 +40,15 @@
     "react-scroll-up": "^1.3.7",
     "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.4",
     "react-tabs": "^5.1.0",
+    "react-topbar-progress-indicator": "^4.1.1",
     "react-visibility-sensor": "^5.1.1",
+    "recharts": "^2.1.14",
+    "redux": "^4.2.0",
     "shufflejs": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.32",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
