--- a/Client-side/package.json
+++ b/Client-side/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
-    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@react-google-maps/api": "^2.11.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "cogo-toast": "^4.2.3",
     "google-map-react": "^2.1.10",
     "npm-install-global": "^1.0.0",
@@ -23,13 +22,11 @@
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.2.0",
     "react-dom": "^18.0.0",
-    "react-drag-drop-files": "^2.3.7",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
-    "react-loader-spinner": "^5.3.4",
-    "react-loading-skeleton": "^3.1.0",
     "react-modal-video": "^1.2.8",
     "react-player": "^2.10.1",
     "react-quill": "^2.0.0",
@@ -48,7 +45,7 @@
     "redux": "^4.2.0",
     "shufflejs": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.4.32",
+    "sweetalert2": "^11.4.33",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
