--- a/Client-side/package.json
+++ b/Client-side/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
     "react-modal-video": "^1.2.8",
+    "react-paginate": "^8.1.3",
     "react-player": "^2.10.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
